Workaround for intermittent issue of Essential Grid cover being invisible when the mouse is over them on page load

--- a/livingstreets.css
+++ b/livingstreets.css
@@ -228,3 +228,7 @@ article.page a img:active {
 	background: linear-gradient(to bottom, rgba(0,0,0,0) 1%,rgba(0,0,0,0.83) 99%,rgba(0,0,0,0.85) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#d9000000',GradientType=0 ); /* IE6-9 */
 }
+/* Workaround for intermittent issue of Essential Grid cover being invisible when the mouse is over them on page load */
+div.esg-entry-cover {
+	visibility:visible !important;
+}
